native/tests/snapshots/parse_tests__parse_rs.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 15,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 2,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 3,
                end_byte: 7,
                kind: "function",
            },
            HighlightToken {
                start_byte: 12,
                end_byte: 23,
                kind: "comment",
            },
            HighlightToken {
                start_byte: 24,
                end_byte: 27,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 28,
                end_byte: 29,
                kind: "variable",
            },
            HighlightToken {
                start_byte: 30,
                end_byte: 31,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 32,
                end_byte: 33,
                kind: "number",
            },
            HighlightToken {
                start_byte: 33,
                end_byte: 34,
                kind: "operator",
            },
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_item",
            name: "main",
            detail: "",
            start_byte: 16,
            end_byte: 52,
            children: [],
        },
    ],
}
