native/tests/snapshots/parse_tests__parse_ts.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 13,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 8,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 9,
                end_byte: 12,
                kind: "function",
            },
            HighlightToken {
                start_byte: 13,
                end_byte: 14,
                kind: "identifier",
            },
            HighlightToken {
                start_byte: 14,
                end_byte: 15,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 16,
                end_byte: 22,
                kind: "type",
            },
            HighlightToken {
                start_byte: 23,
                end_byte: 24,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 25,
                end_byte: 31,
                kind: "type",
            },
            HighlightToken {
                start_byte: 34,
                end_byte: 40,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 41,
                end_byte: 42,
                kind: "identifier",
            },
            HighlightToken {
                start_byte: 42,
                end_byte: 43,
                kind: "operator",
            },
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_declaration",
            name: "add",
            detail: "",
            start_byte: 14,
            end_byte: 59,
            children: [],
        },
    ],
}
