native/tests/snapshots/parse_tests__parse_tsx.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 14,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 5,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 6,
                end_byte: 8,
                kind: "variable",
            },
            HighlightToken {
                start_byte: 9,
                end_byte: 10,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 11,
                end_byte: 12,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 12,
                end_byte: 15,
                kind: "function",
            },
            HighlightToken {
                start_byte: 15,
                end_byte: 16,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 20,
                end_byte: 23,
                kind: "function",
            },
            HighlightToken {
                start_byte: 23,
                end_byte: 24,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 24,
                end_byte: 25,
                kind: "operator",
            },
        ],
        [],
    ],
    outline: [],
}
