native/tests/snapshots/parse_tests__parse_yaml.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 14,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 3,
                kind: "property",
            },
            HighlightToken {
                start_byte: 3,
                end_byte: 4,
                kind: "punctuation.delimiter",
            },
            HighlightToken {
                start_byte: 5,
                end_byte: 10,
                kind: "string",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 4,
                kind: "property",
            },
            HighlightToken {
                start_byte: 4,
                end_byte: 5,
                kind: "punctuation.delimiter",
            },
        ],
        [
            HighlightToken {
                start_byte: 2,
                end_byte: 3,
                kind: "punctuation.delimiter",
            },
            HighlightToken {
                start_byte: 4,
                end_byte: 5,
                kind: "string",
            },
        ],
        [
            HighlightToken {
                start_byte: 2,
                end_byte: 3,
                kind: "punctuation.delimiter",
            },
            HighlightToken {
                start_byte: 4,
                end_byte: 5,
                kind: "string",
            },
        ],
        [],
    ],
    outline: [],
}
